# surreal-sync

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
crates/binlog-protocol/: Cargo.toml
crates/binlog-protocol/src/: bytes_reader.rs  cdc_stream.rs  client.rs  detect.rs  error.rs  event.rs  file_reader.rs  lib.rs  options.rs  test_images.rs  types.rs
crates/binlog-protocol/src/flavor/: mod.rs
crates/binlog-protocol/src/shared/: buf.rs  checksum.rs  event_header.rs  event_type.rs  position.rs  stream.rs  wire.rs
crates/binlog-protocol/tests/: capture_fixtures.rs  coverage_matrix.rs  replay_captured.rs  unsupported_events.rs  write_rows_v2.rs
crates/binlog-protocol/tests/captured/: support.rs
crates/binlog-protocol/tests/fixtures/: binary.rs  bit_set.rs  float_decimal.rs  geometry.rs  integers.rs  json.rs  mod.rs  strings.rs  temporal.rs
crates/binlog-protocol/tests/snapshots/: replay_captured__mariadb_11_4_basic_events.snap  replay_captured__mysql_8_basic_events.snap
crates/checkpoint/: Cargo.toml
crates/checkpoint-surreal3/: Cargo.toml
crates/checkpoint-surreal3/src/: lib.rs
crates/checkpoint/src/: config.rs  file.rs  filesystem.rs  lib.rs  manager.rs  phase.rs  snapshot.rs  store.rs  surreal2.rs  tests.rs
crates/checkpoint/tests/: debug_surreal.rs  surrealdb_integration.rs
crates/csv/: Cargo.toml
crates/csv-source/: Cargo.toml
crates/csv-source/src/: lib.rs  sync.rs
crates/csv-source/tests/: e2e_csv_http.rs  test_column_names.rs  transforms.rs
crates/csv-types/: Cargo.toml
crates/csv-types/src/: forward.rs  lib.rs  reverse.rs
crates/csv/src/: lib.rs  surreal.rs  sync.rs
crates/csv/src/file/: http.rs  local.rs  s3.rs
crates/csv/src/from_csv/: mod.rs  sync.rs
crates/csv/src/types/: forward.rs  mod.rs  reverse.rs
crates/csv/tests/: e2e_csv_http.rs  test_column_names.rs  transforms.rs
crates/file/: Cargo.toml
crates/file/src/: http.rs  lib.rs  local.rs  s3.rs
crates/interleaved-snapshot/: Cargo.toml
crates/interleaved-snapshot/src/: checkpointer.rs  lib.rs  runner.rs  source.rs  tests.rs  types.rs
crates/json/: Cargo.toml
crates/json-types/: Cargo.toml
crates/json-types/src/: csv.rs  forward.rs  lib.rs  reverse.rs
crates/json/src/: lib.rs
crates/json/src/from_jsonl/: conversion.rs  mod.rs  sync.rs
crates/json/src/types/: forward.rs  mod.rs  reverse.rs
crates/json/tests/: e2e_jsonl.rs  transforms.rs
crates/jsonl/: Cargo.toml
crates/jsonl/src/: conversion.rs  lib.rs  surreal.rs  sync.rs
crates/jsonl/src/file/: http.rs  local.rs  mod.rs  s3.rs
crates/jsonl/tests/: e2e_jsonl.rs
crates/jsonl/tests/test_data/: pages.jsonl
crates/kafka/: Cargo.toml  README.md  build.rs
crates/kafka-producer/: Cargo.toml  README.md  build.rs
crates/kafka-producer/proto/: post.proto  user.proto  user_post_relation.proto
crates/kafka-producer/src/: certs.rs  lib.rs  main.rs  protos.rs  secure_container.rs  testdata.rs
crates/kafka-source/: Cargo.toml  README.md
crates/kafka-source/examples/: multi_consumer.rs
crates/kafka-source/src/: consumer.rs  error.rs  lib.rs
crates/kafka-source/src/proto/: decoder.rs  mod.rs
crates/kafka-source/src/sync/: incremental.rs  mod.rs
crates/kafka-types/: Cargo.toml
crates/kafka-types/src/: error.rs  forward.rs  lib.rs  message.rs  proto.rs  reverse.rs
crates/kafka/examples/: multi_consumer.rs
crates/kafka/proto/: user_event.proto  user_post_relation.proto
crates/kafka/src/: client.rs  consumer.rs  error.rs  lib.rs  proto.rs
crates/kafka/src/from_kafka/: client.rs  consumer.rs  error.rs  mod.rs
crates/kafka/src/producer/: container.rs  mod.rs  secure_container.rs  testdata.rs
crates/kafka/src/proto/: decoder.rs  parser.rs
crates/kafka/src/sync/: incremental.rs  mod.rs
crates/kafka/src/types/: error.rs  forward.rs  message.rs  mod.rs  proto.rs  reverse.rs
crates/loadtest-distributed/: Cargo.toml  README.md
crates/loadtest-distributed/src/: aggregator.rs  aggregator_server.rs  cli.rs  config.rs  environment.rs  lib.rs  metrics.rs  partitioner.rs  preset.rs  worker.rs
crates/loadtest-distributed/src/generator/: docker_compose.rs  kubernetes.rs  mod.rs
crates/loadtest-distributed/tests/: aggregator_jsonl.rs
crates/loadtest-framework/: Cargo.toml
crates/loadtest-framework/src/: config.rs  error.rs  lib.rs  metrics.rs  pipeline.rs  report.rs  source.rs
crates/loadtest-generator/: Cargo.toml
crates/loadtest-generator/src/: generator.rs  lib.rs
crates/loadtest-generator/src/generators/: array.rs  mod.rs  numeric.rs  pattern.rs  static_value.rs  timestamp.rs  uuid.rs
crates/loadtest-populate-csv/: Cargo.toml
crates/loadtest-populate-csv/src/: args.rs  error.rs  lib.rs  populator.rs
crates/loadtest-populate-jsonl/: Cargo.toml
crates/loadtest-populate-jsonl/src/: args.rs  error.rs  lib.rs  populator.rs
crates/loadtest-populate-kafka/: Cargo.toml
crates/loadtest-populate-kafka/src/: args.rs  encoder.rs  error.rs  lib.rs  populator.rs  proto_gen.rs
crates/loadtest-populate-mongodb/: Cargo.toml
crates/loadtest-populate-mongodb/src/: args.rs  error.rs  insert.rs  lib.rs  populator.rs
crates/loadtest-populate-mysql/: Cargo.toml
crates/loadtest-populate-mysql/src/: args.rs  error.rs  insert.rs  lib.rs  populator.rs
crates/loadtest-populate-neo4j/: Cargo.toml
crates/loadtest-populate-neo4j/src/: args.rs  error.rs  insert.rs  lib.rs  populator.rs
crates/loadtest-populate-postgresql/: Cargo.toml
crates/loadtest-populate-postgresql/src/: args.rs  error.rs  insert.rs  lib.rs  populator.rs
crates/loadtest-verify/: Cargo.toml
crates/loadtest-verify-surreal2/: Cargo.toml
crates/loadtest-verify-surreal2/src/: compare.rs  error.rs  lib.rs  verifier.rs
crates/loadtest-verify-surreal3/: Cargo.toml
crates/loadtest-verify-surreal3/src/: compare.rs  error.rs  lib.rs  report.rs  verifier.rs
crates/loadtest-verify/src/: args.rs  compare.rs  error.rs  lib.rs  verifier.rs
crates/mongodb-changestream-source/: Cargo.toml
crates/mongodb-changestream-source/src/: checkpoint.rs  full_sync.rs  incremental_sync.rs  lib.rs
docs/: csv.md  (+22 more)
(+915 files in other folders)
