[package]
name = "surreal-sync"
version = "0.1.0"
edition = "2021"
description = "A tool for migrating Neo4j and MongoDB data to SurrealDB"
authors = ["surreal-sync contributors"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database clients
surrealdb = { version = "2.3.7", features = ["protocol-ws", "kv-mem"] }
mongodb = "3.2.4"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = "0.4.41"
chrono-tz = "0.10"
void = "1.0.2"
neo4rs = "0.9.0-rc.6"
base64 = "0.22"
geo = "0.28"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "with-geo-types-0_7"] }
rust_decimal = { version = "^1.23", features = ["db-tokio-postgres"] }
mysql_async = { version = "0.34" }
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
futures = "0.3"
log = "0.4"

# Async traits
async-trait = "0.1"

# Streams
tokio-stream = "0.1"
tempfile = "3.0"
geo-types = "0.7.17"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.0"

[profile.dev]
debug = 1
