[workspace]
members = ["crates/kafka", "crates/kafka-producer", "crates/kafka-types", "crates/postgresql", "crates/csv", "crates/jsonl", "crates/file", "crates/sync-core", "crates/loadtest-generator", "crates/mysql-types", "crates/postgresql-types", "crates/mongodb-types", "crates/surrealdb-types", "crates/json-types", "crates/loadtest-populate-mysql", "crates/loadtest-populate-postgresql", "crates/loadtest-populate-mongodb", "crates/loadtest-populate-csv", "crates/loadtest-populate-jsonl", "crates/loadtest-populate-neo4j", "crates/loadtest-populate-kafka", "crates/loadtest-verify"]
resolver = "2"

[package]
name = "surreal-sync"
version = "0.1.0"
edition = "2021"
description = "A tool for migrating Neo4j and MongoDB data to SurrealDB"
authors = ["surreal-sync contributors"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database clients
surrealdb = { version = "2.3.7", features = ["protocol-ws", "kv-mem"] }
mongodb = "3.2.4"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = "0.4.41"
chrono-tz = "0.10"
void = "1.0.2"
neo4rs = "0.9.0-rc.8"
base64 = "0.22"
geo = "0.31"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "with-geo-types-0_7"] }
rust_decimal = { version = "^1.23", features = ["db-tokio-postgres"] }
mysql_async = { version = "0.34" }
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
futures = "0.3"
log = "0.4"

# Async traits
async-trait = "0.1"

# Streams
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io-util"] }
tempfile = "3.0"
geo-types = "0.7.17"

# CSV parsing
csv = "1.3"

# AWS S3
aws-sdk-s3 = "1.54"
aws-config = "1.5"

# Kafka source
surreal-sync-kafka = { path = "crates/kafka" }

# PostgreSQL replication library
surreal-sync-postgresql-replication = { path = "crates/postgresql" }

# CSV source
surreal-sync-csv = { path = "crates/csv" }

# JSONL source
surreal-sync-jsonl = { path = "crates/jsonl" }

# Load testing populators
loadtest-populate-mysql = { path = "crates/loadtest-populate-mysql" }
loadtest-populate-postgresql = { path = "crates/loadtest-populate-postgresql" }
loadtest-populate-mongodb = { path = "crates/loadtest-populate-mongodb" }
loadtest-populate-csv = { path = "crates/loadtest-populate-csv" }
loadtest-populate-jsonl = { path = "crates/loadtest-populate-jsonl" }
loadtest-populate-neo4j = { path = "crates/loadtest-populate-neo4j" }
loadtest-populate-kafka = { path = "crates/loadtest-populate-kafka" }

# Load testing verifier
loadtest-verify = { path = "crates/loadtest-verify" }

# Sync core (for LoadTestSchema)
sync-core = { path = "crates/sync-core" }

# Type conversion crates
json-types = { path = "crates/json-types" }
mysql-types = { path = "crates/mysql-types" }
surrealdb-types = { path = "crates/surrealdb-types" }
kafka-types = { path = "crates/kafka-types" }

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.0"

# Kafka producer library for Kafka source testing
surreal-sync-kafka-producer = { path = "crates/kafka-producer" }

# Load testing generator
loadtest-generator = { path = "crates/loadtest-generator" }

[profile.dev]
debug = 1
