[workspace]
members = [
    "crates/postgresql",
    "crates/file",
    "crates/sync-core",
    "crates/runtime",
    "crates/loadtest-generator",
    "crates/loadtest-populate",
    "crates/mysql",
    "crates/mongodb-types",
    "crates/neo4j-types",
    "crates/loadtest-populate-mysql",
    "crates/loadtest-populate-postgresql",
    "crates/loadtest-populate-mongodb",
    "crates/loadtest-populate-csv",
    "crates/loadtest-populate-jsonl",
    "crates/loadtest-populate-neo4j",
    "crates/loadtest-populate-kafka",
    "crates/loadtest-verify-surreal2",
    "crates/loadtest-verify-surreal3",
    "crates/surreal",
    "crates/mongodb-changestream-source",
    "crates/neo4j-source",
    "crates/loadtest-distributed",
    "crates/surrealdb-multi-sdk-demo",
    "crates/snowflake",
    "crates/json",
    "crates/csv",
    "crates/kafka",
    "examples/from-mysql-binlog",
    "examples/from-snowflake",
]
resolver = "2"

[package]
name = "surreal-sync"
version = "0.6.0"
edition = "2021"
description = "Command-line tool for syncing data from various sources into SurrealDB"
authors = ["surreal-sync contributors"]
publish = false

[features]
default = []
vendored-openssl = ["dep:openssl"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
toml = "1.1"

# Error handling
anyhow = "1.0.100"

# TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database clients
# SurrealDB SDK v2 (aliased for coexistence with v3)
surrealdb2 = { version = "2.6.5", package = "surrealdb", features = ["protocol-ws", "kv-mem"] }
# SurrealDB SDK v3 (aliased for coexistence with v2)
surrealdb3 = { version = "3.1.5", package = "surrealdb", features = ["protocol-ws", "kv-mem"] }
mongodb = "3.2.4"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = "0.4.41"
chrono-tz = "0.10"
void = "1.0.2"
neo4rs = "0.9.0-rc.8"
base64 = "0.22"
geo = "0.32"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "with-geo-types-0_7"] }
rust_decimal = { version = "^1.23", features = ["db-tokio-postgres"] }
mysql_async = { version = "0.36", default-features = false, features = ["derive", "rustls-tls", "tls12", "aws-lc-rs", "minimal"] }
uuid = { version = "1.10", features = ["v4"] }
rand = "0.10"
futures = "0.3"
log = "0.4"

# Async traits
async-trait = "0.1"

# Streams
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io-util"] }
tempfile = "3.27"
geo-types = "0.7.17"

# CSV parsing
csv = "1.3"

# AWS S3
aws-sdk-s3 = "1.54"
aws-config = "1.5"

# Origin family crates
surreal-sync-kafka = { path = "crates/kafka", features = ["from_kafka", "producer"] }
surreal-sync-postgresql = { path = "crates/postgresql", features = ["from_wal2json", "from_pgoutput", "from_trigger"] }
surreal-sync-csv = { path = "crates/csv", features = ["from_csv"] }
surreal-sync-json = { path = "crates/json", features = ["from_jsonl"] }
surreal-sync-mysql = { path = "crates/mysql", features = ["from_binlog", "from_trigger"] }
surreal-sync-snowflake = { path = "crates/snowflake", features = ["from_snowflake"] }

# Load testing populators
loadtest-populate-mysql = { path = "crates/loadtest-populate-mysql" }
loadtest-populate-postgresql = { path = "crates/loadtest-populate-postgresql" }
loadtest-populate-mongodb = { path = "crates/loadtest-populate-mongodb" }
loadtest-populate-csv = { path = "crates/loadtest-populate-csv" }
loadtest-populate-jsonl = { path = "crates/loadtest-populate-jsonl" }
loadtest-populate-neo4j = { path = "crates/loadtest-populate-neo4j" }
loadtest-populate-kafka = { path = "crates/loadtest-populate-kafka" }

# Load testing verifiers (v2 and v3)
loadtest-verify-surreal2 = { path = "crates/loadtest-verify-surreal2" }
loadtest-verify-surreal3 = { path = "crates/loadtest-verify-surreal3" }

# Load testing distributed (configuration generation & metrics aggregation)
loadtest-distributed = { path = "crates/loadtest-distributed" }

# Sync core (for LoadTestSchema)
surreal-sync-core = { path = "crates/sync-core" }
surreal-sync-runtime = { path = "crates/runtime", features = ["cli"] }

# SurrealDB sink / client (v2+v3+reqwest for CLI dual-SDK auto-detect)
surreal-sync-surreal = { path = "crates/surreal", features = ["v2", "v3", "reqwest"] }

# Neo4j types (origin still separate)
neo4j-types = { path = "crates/neo4j-types" }

# MongoDB source
surreal-sync-mongodb-changestream-source = { path = "crates/mongodb-changestream-source" }

# Neo4j source
surreal-sync-neo4j-source = { path = "crates/neo4j-source" }

# Used by some integration tests / process helpers
libc = "0.2.183"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.27"

# Load testing generator
loadtest-generator = { path = "crates/loadtest-generator" }

[profile.dev]
debug = 1

# CI build profile: stripped binaries for faster linking and smaller nextest archives.
[profile.ci]
inherits = "dev"
debug = 0
strip = "symbols"
incremental = false
