[package]
name = "checkpoint-surreal3"
version = "0.1.0"
edition = "2021"
description = "SurrealDB v3 checkpoint storage implementation"
license = "MIT"

[dependencies]
checkpoint = { path = "../checkpoint" }
surrealdb = "3.0.0-beta.2"
async-trait = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
