[package]
name = "checkpoint"
version = "0.1.0"
edition = "2021"
description = "Checkpoint management for surreal-sync"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
tracing = "0.1"

# SurrealDB for checkpoint storage
surrealdb = { version = "2.3.7", features = ["protocol-ws", "kv-mem"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }
tempfile = "3.10"
