[package]
name = "surreal-sync-csv-source"
version = "0.1.0"
edition = "2021"
description = "CSV file import for surreal-sync"
authors = ["surreal-sync contributors"]

[dependencies]
# CSV parsing
csv = "1.3"

# File source abstraction (local, S3, HTTP)
surreal-sync-file = { path = "../file" }

# Schema support for type-aware conversion
sync-core = { path = "../sync-core" }

# Type conversion crates
csv-types = { path = "../csv-types" }
surreal-sink = { path = "../surreal-sink" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Error handling
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Logging
tracing = "0.1"

# ID generation
ulid = "1.1"
chrono = "0.4.41"
uuid = "1.11"

# Async traits
async-trait = "0.1"

# Utilities
futures = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.24"
surreal-sink = { path = "../surreal-sink" }
surreal2-sink = { path = "../surreal2-sink" }

# SurrealDB for tests
surrealdb = { version = "2.3.7", features = ["protocol-ws", "kv-mem"] }

# HTTP test server
axum = "0.7"
tower = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
