[package]
name = "csv-types"
version = "0.1.0"
edition = "2021"
description = "CSV type conversions for sync-core types"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
