[package]
name = "surreal-sync-csv"
version = "0.6.0"
edition = "2021"
description = "CSV type conversions and from_csv origin for surreal-sync"
publish = false

[features]
default = ["types"]
types = []
from_csv = [
    "types",
    "dep:csv",
    "dep:surreal-sync-file",
    "dep:surreal-sync-runtime",
    "dep:tokio",
    "dep:anyhow",
    "dep:tracing",
    "dep:async-trait",
    "dep:futures",
]

[dependencies]
# types
surreal-sync-core = { path = "../sync-core" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
base64 = "0.22"

# from_csv (optional)
csv = { version = "1.3", optional = true }
surreal-sync-file = { path = "../file", version = "0.6.0", optional = true }
surreal-sync-runtime = { path = "../runtime", optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
anyhow = { version = "1.0.100", optional = true }
tracing = { version = "0.1", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-test = "0.4"
tempfile = "3.27"
anyhow = "1.0.100"
surreal-sync-runtime = { path = "../runtime" }
surreal-sync-surreal = { path = "../surreal", features = ["v2", "v3", "reqwest"], default-features = false }
surrealdb = { version = "2.6.5", features = ["protocol-ws", "kv-mem"] }
surrealdb3 = { version = "3.1.5", package = "surrealdb", features = ["protocol-ws", "kv-mem"] }
axum = "0.8"
tower = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "surreal_sync_csv"
path = "src/lib.rs"

[[test]]
name = "test_column_names"
path = "tests/test_column_names.rs"
required-features = ["from_csv"]

[[test]]
name = "transforms"
path = "tests/transforms.rs"
required-features = ["from_csv"]

[[test]]
name = "e2e_csv_http"
path = "tests/e2e_csv_http.rs"
required-features = ["from_csv"]
