[package]
name = "surreal-sync-interleaved-snapshot"
version = "0.1.0"
edition = "2021"
description = "Generic watermark-based interleaved snapshot full-sync framework for surreal-sync"
license = "MIT"

[dependencies]
# Universal source/target types
sync-core = { path = "../sync-core" }
# SurrealDB sink abstraction
surreal-sink = { path = "../surreal-sink" }
# Checkpoint storage and resumable snapshot checkpoint type
checkpoint = { path = "../checkpoint" }
# Transform → sink apply (identity-fast write_rows / apply_changes)
sync-transform = { path = "../sync-transform" }

# Error handling
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Watermark identifiers
uuid = { version = "1.10", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "sync"] }
tempfile = "3.27"
