[package]
name = "surreal-sync-jsonl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
surrealdb = { version = "2.3.7", features = ["protocol-ws", "kv-mem"] }
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
aws-sdk-s3 = "1.54"
aws-config = "1.5"
tokio-util = { version = "0.7", features = ["io-util"] }

[dev-dependencies]
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
