[package]
name = "surreal-sync-jsonl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
surrealdb = { version = "2.3.7", features = ["protocol-ws", "kv-mem"] }
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.47", features = ["full"] }

# Shared file source utilities
surreal-sync-file = { path = "../file" }

[dev-dependencies]
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
