[package]
name = "kafka-types"
version = "0.1.0"
edition = "2021"
description = "Type conversion between TypedValue and Kafka protobuf for surreal-sync"
authors = ["surreal-sync contributors"]

[dependencies]
# Core types
sync-core = { path = "../sync-core" }
json-types = { path = "../json-types" }
# NOTE: NO dependency on surreal-sync-kafka - this crate defines the shared types
# that kafka depends on, reversing the original dependency direction to break
# the circular dependency.

# Protobuf encoding
protobuf = "3.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# DateTime support
chrono = "0.4"

# Serialization for JSON fields
serde_json = "1.0"

# Base64 encoding
base64 = "0.22"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
