[package]
name = "surreal-sync-kafka"
version = "0.6.0"
edition = "2021"
description = "Kafka type conversions, from_kafka origin, and producer for surreal-sync"
publish = true
repository = "https://github.com/surrealdb/surreal-sync"
homepage = "https://github.com/surrealdb/surreal-sync"
documentation = "https://docs.rs/surreal-sync-kafka"

[features]
default = ["types"]
types = [
    "dep:surreal-sync-core",
    "dep:surreal-sync-json",
    "dep:protobuf",
    "dep:anyhow",
    "dep:thiserror",
    "dep:chrono",
    "dep:serde_json",
    "dep:base64",
    "dep:tracing",
]
from_kafka = [
    "types",
    "dep:surreal-sync-runtime",
    "dep:rdkafka",
    "dep:protobuf-parse",
    "dep:tokio",
    "dep:serde",
    "dep:log",
    "dep:bytes",
    "dep:tempfile",
    "dep:async-trait",
    "dep:clap",
]
producer = [
    "types",
    "dep:rdkafka",
    "dep:tokio",
    "dep:tempfile",
    "dep:tracing-subscriber",
]

[dependencies]
# types
surreal-sync-core = { path = "../sync-core", version = "0.6.0", optional = true }
surreal-sync-json = { path = "../json", version = "0.6.0", default-features = false, features = ["types"], optional = true }
protobuf = { version = "3.5", optional = true }
anyhow = { version = "1.0", features = ["backtrace"], optional = true }
thiserror = { version = "2.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
tracing = { version = "0.1", optional = true }

# from_kafka
surreal-sync-runtime = { path = "../runtime", version = "0.6.0", optional = true }
protobuf-parse = { version = "3.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = { version = "0.4", optional = true }
bytes = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
clap = { version = "4.5", features = ["derive", "env"], optional = true }

# from_kafka + producer
rdkafka = { version = "0.38", features = ["tokio", "sasl"], optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
tempfile = { version = "3.27", optional = true }

# producer
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[build-dependencies]
protobuf-codegen = "3.5"

[dev-dependencies]
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[lib]
name = "surreal_sync_kafka"
path = "src/lib.rs"

[[bin]]
name = "kafka-producer"
path = "src/bin/kafka-producer/main.rs"
required-features = ["producer"]

[[example]]
name = "multi_consumer"
required-features = ["from_kafka"]
