[package]
name = "loadtest-generator"
version = "0.1.0"
edition = "2021"
description = "Data generator for surreal-sync load testing framework"
authors = ["surreal-sync contributors"]

[dependencies]
# Core types
sync-core = { path = "../sync-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
