[package]
name = "loadtest-populate-csv"
version = "0.1.0"
edition = "2021"
description = "CSV file populator for load testing surreal-sync"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
loadtest-populate = { path = "../loadtest-populate" }
loadtest-distributed = { path = "../loadtest-distributed" }
csv-types = { path = "../csv-types" }

clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
tokio = { version = "1.49", features = ["full", "fs"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
