[package]
name = "loadtest-populate-jsonl"
version = "0.1.0"
edition = "2021"
description = "JSONL file populator for load testing surreal-sync"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
loadtest-populate = { path = "../loadtest-populate" }
loadtest-distributed = { path = "../loadtest-distributed" }
json-types = { path = "../json-types" }

clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full", "fs"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
