[package]
name = "loadtest-populate-kafka"
version = "0.1.0"
edition = "2021"
description = "Kafka populator for load testing surreal-sync"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
loadtest-populate = { path = "../loadtest-populate" }
loadtest-distributed = { path = "../loadtest-distributed" }
kafka-types = { path = "../kafka-types" }

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# Protobuf encoding
protobuf = "3.7"
protobuf-parse = "3.7"

# Temp files for proto generation
tempfile = "3"

# Serialization for JSON fields
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
uuid = "1.0"
